# train_model

./: .gitignore  pyproject.toml
detectron2_model/: create_s.py  test_s.py  train_s.py
yolo/: create_s.py  data.yaml  predict_s.py  train_s.py
