[tool.poetry]
name = "train_models"
version = "0.1.0"
description = ""
authors = ["shekharkoirala <shekharkoirala4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
opencv-contrib-python = "^4.7.0"
timm = "^0.6.12"
jupyterlab = "^3.6.1"
pytorch-lightning = "^1.9.2"
transformers = "^4.26.1"
ultralytics = "^8.0.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
